# hipaa-compliance-summarizer

./: .automation-scope.yaml  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  API_DOCUMENTATION.md  API_REFERENCE_PROGRESSIVE_QUALITY_GATES.md  ARCHITECTURE.md  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_EXECUTION_FINAL_REPORT_2025-08-14.md  AUTONOMOUS_EXECUTION_FINAL_REPORT_2025-08-18.md  AUTONOMOUS_EXECUTION_FINAL_REPORT_GENERATION_4.md  AUTONOMOUS_EXECUTION_REPORT.md  AUTONOMOUS_EXECUTION_REPORT_2025-08-05.md  AUTONOMOUS_EXECUTION_REPORT_FINAL.md  AUTONOMOUS_EXECUTION_REPORT_RESEARCH.md  AUTONOMOUS_QUALITY_GATES_REPORT.md  AUTONOMOUS_RESEARCH_PUBLICATION.md  AUTONOMOUS_SDLC_COMPLETE_FINAL_REPORT.md  AUTONOMOUS_SDLC_ENHANCEMENTS.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_GENERATION_4_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_PROGRESSIVE_QUALITY_GATES_FINAL_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  COMPREHENSIVE_BACKLOG.md  CONTRIBUTING.md  DEPENDENCY_AUDIT_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_PROGRESSIVE_QUALITY_GATES.md  DEVELOPMENT_PLAN.md  (+68 more)
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md
config/: hipaa_config.yml  production.yml  quality_gates.yml
deploy/: docker-compose.production.yml
docs/: DEVELOPMENT.md  ROADMAP.md  SDLC_ENHANCEMENT_SUMMARY.md  SETUP_REQUIRED.md  ehr-integration.md  enhanced-ci-cd-workflow.yml  enhanced-phi-patterns.md  environment-config.md  error-handling.md  hipaa-compliance.md  integration-testing.md  operational-excellence.md  performance-monitoring.md  phi-cache-optimization.md  phi-pattern-configuration.md  security.md
hipaa_compliance/: __init__.py  auditor.py  detector.py  redactor.py  summarizer.py
hipaa_summarizer/: __init__.py
nginx/: nginx.conf
observability/: prometheus.yml
scripts/: build.sh  deploy-production.sh  deploy.sh  init-db.sql  run-tests.sh
src/: autonomous_backlog_assistant.py  cli_autonomous_backlog.py
test_input/: patient1.txt  patient2.txt
test_output/: patient1.txt.summary.txt  patient2.txt
test_output_gen2/: patient1.txt  patient2.txt.summary.txt
tests/: Makefile  README.md  conftest.py  sprint_acceptance_criteria.json  test_advanced_features.py  test_advanced_system_integration.py  test_batch_cache_performance.py  test_batch_error_handling.py  test_batch_io_optimizations.py  test_batch_performance_improvements.py  test_batch_processor.py  test_cli_batch_process.py  test_cli_cache_performance.py  test_cli_documentation.py  test_cli_entry_points.py  test_comprehensive_error_handling.py  (+39 more)
(+193 files in other folders)
