[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hipaa-compliance-summarizer"
version = "0.1.0"
description = "HIPAA Compliance Summarizer"
authors = [{name = "Dev", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]
