[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hipaa_compliance_summarizer"
version = "0.0.1"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "hipaa_compliance_summarizer",
    "hipaa_compliance_summarizer.cli",
]

[project.scripts]
hipaa-summarize = "hipaa_compliance_summarizer.cli.summarize:main"
hipaa-batch-process = "hipaa_compliance_summarizer.cli.batch_process:main"
hipaa-compliance-report = "hipaa_compliance_summarizer.cli.compliance_report:main"
