[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hipaa_compliance_summarizer"
version = "0.0.1"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "hipaa_compliance_summarizer",
    "hipaa_compliance_summarizer.cli",
]

[project.scripts]
hipaa-summarize = "hipaa_compliance_summarizer.cli.summarize:main"
hipaa-batch-process = "hipaa_compliance_summarizer.cli.batch_process:main"
hipaa-compliance-report = "hipaa_compliance_summarizer.cli.compliance_report:main"

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit
]
ignore = [
    "S101",  # Use of assert detected (needed for tests)
    "S603",  # subprocess call - check for execution of untrusted input
    "S607",  # Starting a process with a partial executable path
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S106", "S311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=hipaa_compliance_summarizer --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
